--- a/style.css
+++ b/style.css
@@ -1,178 +1,101 @@
-*,
-*::before,
-*::after{
+*{
     margin: 0;
     padding: 0;
-    box-sizing: inherit;
-}
-html{
-    font-family: 'Roboto' sans-serif;
-    font-size: 10px;
     box-sizing: border-box;
 }
-body{
-    width: 100%;
-    height: 100vh;
-}
-#particles-js{
-	display: flex;
-	height: 100%;
+html{
+    font-family: SF Pro Display, sans-serif;
 }
 header{
-    width:100%;
-    background-color: rgb(0, 0, 0);    
-}
-.container{
-    width: 100%;
-    max-width: 120rem;
-    margin: 0 auto;
-    padding: 0 1.5rem;
-}
-nav{
-    width: 100%;
-    height: 8rem;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    width: 100%;
+    height: 15vh;
+    background-color: #0a0a0a;
 }
-.navbar{
-    width: 6rem;
-    height: 6rem;
-    border-radius: 100%;
-    display: flex;
-    margin: auto;
-    background: url("images/apple.svg") center no-repeat;
-}
-.nav-list{
+.lista{
+    width: 100%;
+    font-size: 20px;
     display: flex;
     list-style: none;
+    align-items: center;
+    justify-content: space-around;
 }
-.navbuscar{
-	width: 6rem;
-	height: 8rem;
-	border-radius: 100%;
-	display: flex;
-	margin: auto;
-	background: url("images/search.svg") center no-repeat;
-}
-.nav-link{
-    font-size: 1.6rem;
+.lista a{
+    color: #ffffff;
     text-decoration: none;
-    display: block;
-    margin: 0 2rem;
-    color: #fff;
-    transform: scale(0);
-    transition: transform 650ms;    
 }
-.nav-item{
+.lista-item{
     position: relative;
-    line-height: 8rem;
+    line-height: 2rem;
     transition-delay: .6s;
-    visibility: hidden;
 }
-.nav-item::before{
-	content:"";
-	position: absolute;
-	width: 100%;
-	height: 3px;
-	background-color: rgb(255, 0, 0);
-	left: 0;
-	bottom: 0;
-	transform: scaleX(0);
-	transform-origin: right;
-	transition: transform 650ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+.lista-item::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    border-radius: 5px;
+    background-color: #ff0000;
+    box-shadow: 0 0 30px #ff5733,
+                0 0 60px #ff6644,
+                0 0 30px #ff3b3b;
+    left: 0;
+    bottom: 0;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 369ms cubic-bezier(.26,.92,.96,.48);
 }
-.nav-item:hover::before{
-	transform: scaleX(1);
-	transform-origin: left;
+.lista-item:hover::before{
+    transform: scaleX(1);
+    transform-origin: left;
 }
-/*Menu desplegable design*/
-.hamburger{
-	width: 3.6rem;
-	height: 1.8rem;
-	position: relative;
-	cursor: pointer;
-	line-height: 5rem;
-    z-index: 1500;
+.item-logo{
+    width: 100px;
+    height: 70px;
+    background: url(images/logo_white.svg)no-repeat center;
 }
-.hamburger .line{
-	width: 100%;
-	height: 2px;
-	background-color: #fff;
-	position: absolute;
-	display: block;
-	right: 0;
-    transition: all 650ms;
+
+.redes-sociales{
+    width: 100%;
+    font-size: 10px;
+    display: flex;
+    list-style: none;
+    align-items: baseline;
+    justify-content: space-around;
 }
-.hamburger .line:nth-child(1){
-	top: 0;
+.ico{
+    background: #ff0000;
 }
-.hamburger .line:nth-child(2){
-	top: 50%;
-	margin-top: -1px;
-	width: 2.8rem;
+.facebook{
+    background: url(images/buscar_white.svg)no-repeat top;
+    width: 10px;
+    height: 10px;
 }
-.hamburger .line:nth-child(3){
-	top: 100%;
-	margin-top: -2px;
-	width: 2rem;
-	margin-top: -2px;
+.instagram{
+    background: url(images/buscar_white.svg)no-repeat top;
+    width: 10px;
+    height: 10px;
 }
-.hamburger.active .line:nth-child(1){
-	transform: translateY(.8rem) rotate(45deg);
-    width: 2rem;
+.twitter{
+    background: url(images/buscar_white.svg)no-repeat top;
+    width: 10px;
+    height: 10px;
 }
-.hamburger.active .line:nth-child(2){
-	opacity: 0;
+.linkedin{
+    background: url(images/buscar_white.svg)no-repeat top;
+    width: 10px;
+    height: 10px;
 }
-.hamburger.active .line:nth-child(3){
-	transform: translateY(-.8rem) rotate(-45deg);
-	width: 2rem;
+main{
+    padding: 20px 10px;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
 }
-.nav-list.active .nav-link{
-    transform: scale(1);
+footer{
+    padding: 20px 10px;
+    width: 100%;
+    height: 10vh;
+    background-color: #0a0a0a;
+    position: relative;
 }
-.nav-list.active .nav-item{
-	transition-delay: initial;	
-    visibility: visible;
-}
-.nav-list.active .nav-item:nth-child(1) .nav-link{
-	transition-delay: .5s;
-}
-.nav-list.active .nav-item:nth-child(2) .nav-link{
-	transition-delay: .4s;
-}
-.nav-list.active .nav-item:nth-child(3) .nav-link{
-	transition-delay: .3s;
-}
-.nav-list.active .nav-item:nth-child(4) .nav-link{
-	transition-delay: .2s;
-}
-.nav-list .nav-item:nth-child(4) .nav-link{
-	transition-delay: .2s;
-}
-.nav-list .nav-item:nth-child(3) .nav-link{
-	transition-delay: .3s;
-}
-.nav-list .nav-item:nth-child(2) .nav-link{
-	transition-delay: .4s;
-}
-.nav-list .nav-item:nth-child(1) .nav-link{
-	transition-delay: .5s;
-}
-/*@media screen and (max-width: 768px){
-	.nav-list{
-		width: 100%;
-		height: 100vh;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		position: fixed;
-		left: 0;
-		bottom: -100px;
-		transition: bottom 650ms;
-	}
-	.nav-list.active{
-		bottom: 0;
-	}
-}*/
