--- a/styleha.css
+++ b/styleha.css
@@ -6,7 +6,7 @@ section{
     min-height: 50vh;
 }
 .lenguajes{
-    position: relative;
+   position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -35,7 +35,7 @@ section{
     top: 0;
     left: 0;
     text-align: center;
-    color: #fff;
+    color: #000;
     width: 100%;
     transform-style: preserve-3d;
     transform: translate3d(0,0,75px);
@@ -84,7 +84,7 @@ section{
     position: absolute;
     top: 50%;
     left: 50%;
-    max-width: 100px;
+    max-width: 60px;
     transition: 0.5s;
     z-index: 11;
     transition: 0.5s;
@@ -122,8 +122,3 @@ section{
 .lenguajes .box:nth-child(7) .visit{
     background: rgb(73, 137, 248);
 }
-/*@media screen and (max-width: 768px){
-    .lenguajes.active{
-		display: none;	
-    }
-}*/
