--- a/public/style.css
+++ b/public/style.css
@@ -35,10 +35,10 @@ header{
     width: 100%;
     height: 3px;
     border-radius: 5px;
-    background-color: #ff0000;
-    box-shadow: 0 0 30px #ff5733,
-                0 0 60px #ff6644,
-                0 0 30px #ff3b3b;
+    background-color: #00b800;
+    box-shadow: 0 0 30px #64ff78,
+                0 0 60px #63ff54,
+                0 0 30px #6cff67;
     left: 0;
     bottom: 0;
     transform: scaleX(0);
@@ -63,28 +63,25 @@ header{
     align-items: baseline;
     justify-content: space-around;
 }
-.ico{
-    background: #ff0000;
-}
 .facebook{
-    background: url(images/buscar_white.svg)no-repeat top;
-    width: 10px;
-    height: 10px;
+    background: url(images/facebook_white.svg)no-repeat;
+    width: 30px;
+    height: 30px;
 }
 .instagram{
-    background: url(images/buscar_white.svg)no-repeat top;
-    width: 10px;
-    height: 10px;
+    background: url(images/instagram_white.svg)no-repeat;
+    width: 30px;
+    height: 30px;
 }
 .twitter{
-    background: url(images/buscar_white.svg)no-repeat top;
-    width: 10px;
-    height: 10px;
+    background: url(images/twitter_white.svg)no-repeat;
+    width: 30px;
+    height: 30px;
 }
 .linkedin{
-    background: url(images/buscar_white.svg)no-repeat top;
-    width: 10px;
-    height: 10px;
+    background: url(images/linkedin_white.svg)no-repeat;
+    width: 30px;
+    height: 30px;
 }
 main{
     padding: 20px 10px;
