--- a/public/styleha.css
+++ b/public/styleha.css
@@ -66,7 +66,7 @@ section{
     opacity: 1;
 }
 .lenguajes .box .circle{
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     width: 100px;
@@ -77,6 +77,10 @@ section{
     z-index: 10;
     opacity: 1;
     transform: translate3d(-50%,-50%,50px);
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden;
 }
 .lenguajes .box .lenguaje{
     position: absolute;
@@ -94,35 +98,35 @@ section{
 }
 .lenguajes .box:nth-child(1) .circle,
 .lenguajes .box:nth-child(1) .visit{
-    background: rgb(255,80,46);
+    background: #ec6231;
 }
 .lenguajes .box:nth-child(2) .circle,
 .lenguajes .box:nth-child(2) .visit{
-    background: rgb(0, 151, 246);
+    background: #28a9e0;
 }
 .lenguajes .box:nth-child(3) .circle,
 .lenguajes .box:nth-child(3) .visit{
-    background: rgb(241, 191, 34);
+    background: #efc725;
 }
 .lenguajes .box:nth-child(4) .circle,
 .lenguajes .box:nth-child(4) .visit{
-    background: rgb(254, 102, 0);
+    background: #5382a1;
 }
 .lenguajes .box:nth-child(5) .circle,
 .lenguajes .box:nth-child(5) .visit{
-    background: rgb(255, 255, 255);
+    background: #ffc331;
 }
 .lenguajes .box:nth-child(6) .circle,
 .lenguajes .box:nth-child(6) .visit{
-    background: rgb(195, 0, 47);
+    background: #c3002f;
 }
 .lenguajes .box:nth-child(7) .circle,
 .lenguajes .box:nth-child(7) .visit{
-    background: rgb(73, 137, 248);
+    background: #478aff;
 }
 .lenguajes .box:nth-child(8) .circle,
 .lenguajes .box:nth-child(8) .visit{
-    background: rgb(227, 7, 19);
+    background: #494949;
 }
 .lenguajes .box:nth-child(9) .circle,
 .lenguajes .box:nth-child(9) .visit{
